--- a/udagram-frontend/package.json
+++ b/udagram-frontend/package.json
@@ -7,7 +7,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "exit 0",
+    "test": "echo \"No test specified\" && exit 0",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
