--- a/udagram-api/package.json
+++ b/udagram-api/package.json
@@ -2,14 +2,14 @@
   "name": "abdelkawy-udagram-api",
   "version": "2.0.0",
   "description": "AWS hosting full stack application",
-  "main": "www/server.js",
+  "main": "./src/server.ts",
   "scripts": {
     "start": "node .",
     "tsc": "tsc",
     "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
     "prod": "tsc && node ./www/server.js",
     "clean": "rm -rf www/ || true",
-    "build": "npm run clean && tsc && cp -rf src/config www/config && cp .npmrc www/.npmrc && cp package.json www/package.json && cd www && zip -r www.zip . && cd ..",
+    "build": "npm run clean && tsc && cp -rf src/config www/config && cp .npmrc www/.npmrc && cp package.json www/package.json",
     "test": "echo \"No test specified\" && exit 0"
   },
   "keywords": [],
