--- a/udagram-api/package.json
+++ b/udagram-api/package.json
@@ -2,7 +2,7 @@
   "name": "abdelkawy-udagram-api",
   "version": "2.0.0",
   "description": "AWS hosting full stack application",
-  "main": "./src/server.ts",
+  "main": "server.js",
   "scripts": {
     "start": "node .",
     "tsc": "tsc",
